[package]
name = "frankenstein-tg-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frankenstein = {version = "*", features = ["async-telegram-trait", "async-http-client"], path = "frankenstein"}
tokio = {version = "*", features = ["full"]}
